--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,8 +8,7 @@ version: 2
 updates:
 
   - package-ecosystem: "github-actions"
-    # Workflow files stored in the
-    # default location of `.github/workflows`
+    # Workflow files are stored in the default location of `.github/workflows`
     directory: "/"
     schedule:
       interval: "weekly"
